// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EbiSpeciesIcon with classes Icon of mapped species alpaca matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="a"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Alpaca"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species amoeba matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="0"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Amoeba"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species anolis carolinensis matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="7"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Anolis carolinensis"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species anolis matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="7"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Anolis"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species arabidopsis lyrata matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="B"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Arabidopsis lyrata"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species arabidopsis matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="B"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Arabidopsis"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species arabidopsis thaliana matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="B"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Arabidopsis thaliana"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species armadillo matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="l"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Armadillo"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species aspergillus fumigatus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="£"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Aspergillus fumigatus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species aspergillus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="£"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Aspergillus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species barley matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="5"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Barley"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species bat matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="("
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Bat"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species bee matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="$"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Bee"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species bos taurus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="C"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Bos taurus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species brachypodium distachyon matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="%"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Brachypodium distachyon"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species brachypodium matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="%"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Brachypodium"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species brassica matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="B"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Brassica"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species brassica oleracea matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="B"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Brassica oleracea"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species brassica rapa matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="B"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Brassica rapa"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species bug matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="b"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Bug"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species c elegans matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="W"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="C elegans"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species caenorhabditis elegans matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="W"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Caenorhabditis elegans"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species canis lupus familiaris matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="d"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Canis lupus familiaris"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species canis lupus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="d"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Canis lupus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species cat matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="A"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Cat"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species cavia porcellus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="g"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Cavia porcellus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species chicken matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="k"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Chicken"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species chimpanzee matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="i"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Chimpanzee"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species corn matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="c"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Corn"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species cow matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="C"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Cow"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species danio rerio matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="Z"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Danio rerio"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species diatom matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="2"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Diatom"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species dog matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="d"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Dog"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species dolphin matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="D"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Dolphin"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species drosophila melanogaster matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="F"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Drosophila melanogaster"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species ecoli matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="L"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Ecoli"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species elephant matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="e"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Elephant"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species elephas maximus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="e"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Elephas maximus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species equus caballus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="h"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Equus caballus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species erinaceus europaeus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="o"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Erinaceus europaeus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species escherichia coli matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="L"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Escherichia coli"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species felis catus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="A"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Felis catus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species ferret matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="!"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Ferret"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species finch matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="n"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Finch"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species fly matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="F"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Fly"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species frog matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="f"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Frog"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species fungus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="u"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Fungus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species gallus gallus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="k"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Gallus gallus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species glycine max matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="^"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Glycine max"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species glycinemax matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="^"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Glycinemax"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species goat matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="m"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Goat"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species gorilla gorilla matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="G"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Gorilla gorilla"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species gorilla matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="G"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Gorilla"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species grapes matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="O"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Grapes"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species guinea pig matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="g"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Guinea pig"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species hedgehog matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="o"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Hedgehog"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species homo sapiens matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="H"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Homo sapiens"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species hordeum vulgare matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="5"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Hordeum vulgare"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species hordeum vulgare subsp. vulgare matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="5"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Hordeum vulgare subsp. vulgare"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species horse matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="h"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Horse"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species human matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="H"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Human"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species kangaroo rat matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="3"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Kangaroo rat"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species louse matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="4"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Louse"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species loxodonta africana matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="e"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Loxodonta africana"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species loxodonta cyclotis matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="e"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Loxodonta cyclotis"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species macaca mulatta matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="r"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Macaca mulatta"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species monkey matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="r"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Monkey"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species monodelphis domestica matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="9"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Monodelphis domestica"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species monodelphis matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="9"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Monodelphis"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species mosquito matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="1"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Mosquito"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species mouse lemur matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="N"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Mouse lemur"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species mouse matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="M"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Mouse"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species mus musculus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="M"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Mus musculus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species mustela putorius furo matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="!"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Mustela putorius furo"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species orangutan matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="*"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Orangutan"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species ornithorhynchus anatinus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="U"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Ornithorhynchus anatinus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species oryctolagus cuniculus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="t"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Oryctolagus cuniculus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species oryza sativa japonica group matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="6"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Oryza sativa japonica group"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species oryza sativa matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="6"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Oryza sativa"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species ovis aries matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="x"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Ovis aries"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species pan paniscus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="i"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Pan paniscus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species pan troglodytes matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="i"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Pan troglodytes"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species papio anubis matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="8"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Papio anubis"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species physcomitrella patens matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="P"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Physcomitrella patens"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species pig matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="p"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Pig"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species plant matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="P"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Plant"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species plasmodium matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="@"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Plasmodium"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species platypus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="U"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Platypus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species pongo abelii matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="*"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Pongo abelii"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species pongo pygmaeus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="*"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Pongo pygmaeus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species pufferfish matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="E"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Pufferfish"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species pyrrhula pyrrhula matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="n"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Pyrrhula pyrrhula"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species rabbit matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="t"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Rabbit"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species rat matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="R"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Rat"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species rattus norvegicus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="R"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Rattus norvegicus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species ray matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="+"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Ray"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species rice matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="6"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Rice"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species saccharomyces cerevisiae matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="Y"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Saccharomyces cerevisiae"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species schistosoma mansoni matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="W"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Schistosoma mansoni"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species schizosaccharomyces pombe matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="Y"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Schizosaccharomyces pombe"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species scorpion matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="s"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Scorpion"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species sheep matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="x"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Sheep"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species shrew matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="Q"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Shrew"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species snail matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="'"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Snail"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species solanum lycopersicum matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon=")"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Solanum lycopersicum"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species solanum tuberosum matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon=")"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Solanum tuberosum"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species sorghum bicolor matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="P"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Sorghum bicolor"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species spider matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="S"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Spider"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species squirrel matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="I"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Squirrel"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species sus scrofa matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="p"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Sus scrofa"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species tetraodon nigroviridis matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="E"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Tetraodon nigroviridis"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species tick matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="&"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Tick"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species tomatoes matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon=")"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Tomatoes"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species triticum aestivum matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="P"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Triticum aestivum"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species vicugna pacos matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="a"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Vicugna pacos"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species virus matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="v"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Virus"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species vitis vinifera matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="O"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Vitis vinifera"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species wallaby matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="w"
  style={
    Object {
      "color": "indianred",
    }
  }
  title="Wallaby"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species xenopus (silurana) tropicalis matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="f"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Xenopus (silurana) tropicalis"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species xenopus tropicalis matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="f"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Xenopus tropicalis"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species yeast matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="Y"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Yeast"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species zea mays matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="c"
  style={
    Object {
      "color": "mediumseagreen",
    }
  }
  title="Zea mays"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of mapped species zebrafish matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="Z"
  style={
    Object {
      "color": "deepskyblue",
    }
  }
  title="Zebrafish"
/>
`;

exports[`EbiSpeciesIcon with classes Icon of unknown species matches snapshot 1`] = `
<span
  className="icon icon-species"
  data-icon="❔"
  style={
    Object {
      "color": "black",
    }
  }
  title="Crocubot"
/>
`;
